fix viewport on mobile devices

--- a/src/app/streams/streams.module.css
+++ b/src/app/streams/streams.module.css
@@ -389,4 +389,9 @@
         height: 380px;
         min-height: 380px;
     }
+
+    .title {
+        font-size: 16px;
+        line-height: 22px;
+    }
 }
